--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="jquery-3.6.1.min.js"></script>
         <script src="main.js" ></script>
         
-    <title>50嵐</title>
+    <title>Milksha</title>
 </head>
 <body>
     <img src="milksha.jpg" style="transition-property:all;transition-duration:0.5s"> 
